<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeIcon"
            android:title="@string/home"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/login"
            android:title="@string/login_title"
            app:showAsAction="ifRoom" />


        <item
            android:id="@+id/Register"
            android:title="@string/register_title"
            app:showAsAction="ifRoom" />

    </group>
    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="single">
        <item
            android:id="@+id/promotions"
            android:title="@string/promotions"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/category"
            android:title="@string/category"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/menu_last"
        android:checkableBehavior="single">
        <item
            android:id="@+id/order"
            android:title="@string/order"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/cart"
            android:title="@string/cart"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/customerdetails"
            android:title="@string/customerdetails"
            app:showAsAction="ifRoom" />
    </group>

</menu>