<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tableLayoutOrderDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                style="@style/textView"
                android:layout_weight="1"
                android:text="@string/order_number"/>

            <TextView
                android:id="@+id/order_id_text_view"
                style="@style/textView"
                android:layout_weight="1" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/textView"
                android:layout_weight="1"
                android:text="@string/order_status" />

            <TextView
                android:id="@+id/order_status_text_view"
                style="@style/textView"
                android:layout_weight="1" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/textView"
                android:layout_weight="1"
                android:text="@string/order_total"/>

            <TextView
                android:id="@+id/order_id_total_view"
                style="@style/textView"
                android:layout_weight="1"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:text="@string/your_order_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />
</LinearLayout>

